<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.CardLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/total_label"
            android:text="@string/tally_date_default" />

        <TextView
            android:id="@+id/total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tally_total"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:id="@+id/tally_total"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_rectangle"
            android:gravity="center"
            android:text="@string/tally_count_default"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tally_total_size" />
    </RelativeLayout>

<!-- </android.support.v7.widget.CardView> -->
