<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    style="@style/Widget.CardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="24dp"
        android:paddingTop="24dp">

        <ImageButton
            android:id="@+id/tally_decrement"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/tally_decrement"
            android:src="@drawable/ic_remove_circle_white_48dp"
            android:tint="@color/accent_light" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/tally_decrement"
            android:layout_toLeftOf="@+id/tally_increment"
            android:layout_toRightOf="@+id/tally_decrement"
            android:layout_toStartOf="@+id/tally_increment"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tally_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tally_description_default"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorSecondary" />

            <TextView
                android:id="@+id/tally_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tally_count_default"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/tally_increment"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/tally_increment"
            android:src="@drawable/ic_add_circle_white_48dp"
            android:tint="@color/accent_light" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
